<resources>
    <string name="app_name">alfa-bank-android-app-parent-2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="authorization">Авторизация</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>
    <string name="input_pin">Введите pin-code</string>
    <string name="input_second_time_pin">Введите pin-code повторно</string>
    <string name="logIn">Авторизоваться</string>
    <string name="one">1</string>
    <string name="children">Мои дети</string>
    <string name="notification">Уведомления</string>
    <string name="createNewNotification">Создать новое уведомления</string>
    <string name="timeNotification">Время для уведомлений</string>
    <string name="settings">Настройки</string>
    <string name="switchOnNotification">Включить уведомления</string>
    <string name="chooseNotificationTime">Выбрать время уведомлений</string>
    <string name="chooseNotificationDay">Выбрать день</string>
    <string name="monday">Каждый понедельник</string>
    <string name="tuesday">Каждый вторник</string>
    <string name="wednesday">Каждую среду</string>
    <string name="thursday">Каждый четверг</string>
    <string name="friday">Каждую пятницу</string>
    <string name="saturday">Каждую субботу</string>
    <string name="sunday">Каждое воскресенье</string>
    <string name="chooseDayNotification">Выбрать день уведомлений</string>
    <string name="Exit">Выход</string>
    <string name="ThereAreNoDishesOnThisDay">Отсутствует меню</string>
    <string name="DefaultName">Мария Синицина</string>
    <string name="DefaultDay">Понедельник</string>
    <string name="DefaultType">Завтрак</string>
    <string name="defaultDish">Сыр 2шт</string>
    <string name="defaultBill">Стоимость: 100 руб.</string>
    <string name="placeAnOrder">Оформить заказ</string>
    <string name="porridge">Каша овсяная</string>
    <string name="defaultWeight">150 г</string>
    <string name="calories">ккал</string>
    <string name="squirrels">белки</string>
    <string name="fats">жиры</string>
    <string name="carbohydrates">углеводы</string>
    <string name="composition">Состав:</string>
    <string name="defaultComposition">Крупа овсяная, молоко, сливочное масло</string>
    <string name="defaultNotificationView">Текст при копировании в меню:</string>
    <string name="defaultCalories">Ккал: 600</string>
    <string name="defaultSquirrels">Белки: 20</string>
    <string name="defaultFats">Жиры: 80</string>
    <string name="defaultCarbohydrates">Углеводы: 100</string>
</resources>