<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notification.NotificationFragment"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notificationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification" />

            <TextView
                android:id="@+id/switchNotificationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/switchOnNotification" />

            <Button
                android:id="@+id/chooseTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/chooseNotificationTime" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseNotificationDay" />

            <CheckBox
                android:id="@+id/checkbox_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/checkbox_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/checkbox_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/checkbox_thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/checkbox_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/checkbox_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <CheckBox
                android:id="@+id/checkbox_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>