<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fbfff9"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/fbfff9"
        app:cardElevation="0dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultNotificationView"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <CheckBox
                android:id="@+id/nameCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DefaultName"
                android:buttonTint="@color/A7D7AF"
                android:textColor="@color/black"
                />
            <CheckBox
                android:id="@+id/dayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/A7D7AF"
                android:text="@string/DefaultDay"
                android:textColor="@color/black"/>

            <CheckBox
                android:id="@+id/billCheckBox"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultBill"
                android:buttonTint="@color/A7D7AF"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/squirrelsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultSquirrels"
                android:buttonTint="@color/A7D7AF"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/fatCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultFats"
                android:buttonTint="@color/A7D7AF"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/carbohydratesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultCarbohydrates"
                android:buttonTint="@color/A7D7AF"
                android:textColor="@color/black"/>
            <CheckBox
                android:id="@+id/caloriesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultCalories"
                android:buttonTint="@color/A7D7AF"
                android:textColor="@color/black"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>